...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tdx-Op-OOM">
                                <rect key="frame" x="114" y="296" width="147" height="75"/>
                                <accessibility key="accessibilityConfiguration" label="mybutton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="52"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qw0-uh-0IK"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ofd-TT-qW3">
                                <rect key="frame" x="87.5" y="187" width="200" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="mytext"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="N4M-D4-Blg"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
